syntax = "proto3";

package pb;

import "post/post.proto";

option go_package = "github.com/paweldyl/blog-backend/pb";

message GetPostsListingRequest {
    string per_page = 1;
    string offset = 2;
}

message GetPostsListingResponse {
    repeated Post post = 1;
}


